# trapninja

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  cleanup.sh  documentation_cleanup.sh  pyproject.toml  pytest.ini  requirements-minimal.txt  snmp_trap_tracker.sh  test_report.txt  trapninja.py
.claude/: settings.local.json
ansible/: README.md  deploy.yml
ansible/inventory/group_vars/: trapninja_servers.yml.example
ansible/inventory/host_vars/: trapninja-primary.yml.example  trapninja-secondary.yml.example
ansible/templates/: cache_config.json.j2  destinations.json.j2  ha_config.json.j2  trapninja.service.j2
config/: capture_config.json  ha_config.json  ha_config_secondary_example.json  redirected_destinations.json  shadow_config.json  stats_config.json
config.example/: cache_config.json  capture_config.json  ha_config.json  metrics_config.json  trapninja.json
dev/: CHANGELOG.md  capture_debug.py  diagnose_bcc.py  diagnose_snmpv3.py  find_bcc.py  requirements.txt  test_snmpv2c_encoding.py
dev/scripts/: download-packages.sh  install-packages.sh
dev/tests/: CLAUDE.md  TEST_PROGRESS.md  conftest.py  granular-stats-test.py  network-tests.py  requirements-test.txt  snmp-parser-tests.py  test_cache_failover.py  test_cache_redis.py  test_cache_replay.py  test_cli_executor.py  test_cli_output.py  test_cli_parser.py  test_cli_validation.py  test_config.py  test_control.py  test_core_constants.py  test_core_exceptions.py  test_core_types.py  test_daemon.py  test_diagnostics.py  test_ebpf_fragmentation.py  test_ha_api.py  test_ha_cluster.py  test_ha_config.py  test_ha_messages.py  test_ha_state.py  test_ha_sync.py  test_impl_config_runtime.py  test_impl_filters.py  test_impl_ha_cache.py  test_impl_metrics_consistency.py  test_impl_routing.py  test_impl_snmpv3.py  test_impl_stats_forwarding.py  test_impl_trap_lifecycle.py  test_integration_config.py  test_integration_forwarding.py  test_integration_ha.py  test_logger.py  (+14 more)
dev/tests/fixtures/: __init__.py  configs.py  packets.py  (+1 more)
dev/tools/: packet_duplication_diagnostic.py  quick_packet_diagnostic.sh  snmpv3_capture_test.py  snmpv3_diagnostic.py  spoofed_traffic_diagnostic.sh
docs/: ARCHITECTURE.md  ARCHITECTURE_BRIEF.md  CACHE.md  CLI.md  CLI_MODULE.md  CODE_REVIEW.md  CONFIG.md  CONFIG_SYNC.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_INDEX.md  FAILOVER_REPLAY.md  FRAGMENTATION.md  GRANULAR_STATS.md  HA.md  INSTALL.md  METRICS.md  SECURITY.md  SHADOW_MODE.md  SNMPV3_CREDENTIALS.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/fixes/: CACHE_INTEGRATION_FIX.md
docs/refactoring/: CLEANUP_SUMMARY.md  CODE-REVIEW-REFACTORING-ANALYSIS.md  LEGACY_CODE_REVIEW.md  OPTIONAL-MODULES-SYSTEM.md  PHASE2_LEGACY_CODE_REVIEW.md  REFACTORING-STATUS.md  REFACTORING_PLAN.md
documentation/: ARCHITECTURE.md  CACHE.md  CLEANUP_REPORT.md  CLI.md  CODE-REVIEW-REFACTORING-ANALYSIS.md  HA.md  INSTALL.md  LEGACY_CODE_REVIEW.md  METRICS.md  SHADOW_MODE.md  TROUBLESHOOTING.md
src/: trapninja.py
src/config/: cache_config.json  capture_config.json  destinations.json  ha_config_primary_example.json  listen_ports.json  sync_config.json  trapninja.json
src/trapninja/: __init__.py  __version__.py  config.py  control.py  control_handlers.py  daemon.py  ebpf.py  ha.py  ha_compat.py  logger.py  metrics.py  network.py  packet_processor.py  py.typed  redirection.py  security.py  service.py  shadow.py  snmp.py  snmpv3_credentials.py  snmpv3_decryption.py
tests/: __init__.py  config-tests.py  metrics-test.py
tests/unit/: __init__.py  test_command_base.py  test_optional_modules.py  test_service_init.py  test_sliding_window_metrics.py
trapninja/: __init__.py  __version__.py  config.py  control.py  daemon.py  diagnostics.py  ha.py  main.py  metrics.py  network.py  packet_processor.py  redirection.py  service.py  snmp.py  snmpv3_decryption.py
trapninja/cache/: redis_backend.py  replay.py
trapninja/cli/: daemon_commands.py  executor.py  ha_commands.py  parser.py  stats.py  stats_commands.py
trapninja/core/: constants.py
trapninja/ha/: __init__.py  cluster.py  config.py  state.py
trapninja/processing/: forwarder.py  worker.py
trapninja/stats/: collector.py  models.py
(+75 files in other folders)
