# TrapNinja - SNMP Trap Forwarder
# ================================
# Modern Python packaging configuration (PEP 621)
#
# Build commands:
#   pip install build
#   python -m build              # Creates both sdist and wheel
#   python -m build --sdist      # Source distribution only
#   python -m build --wheel      # Wheel only
#
# Install from built package:
#   pip install dist/trapninja-0.7.16-py3-none-any.whl
#
# Install in development mode:
#   pip install -e .

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trapninja"
dynamic = ["version"]
description = "High-performance SNMP trap forwarding system for telecommunications networks"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Matthew Appleton"}
]
keywords = [
    "snmp",
    "trap",
    "forwarder",
    "network",
    "monitoring",
    "telecommunications",
    "noc",
    "ebpf",
    "high-availability"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

# Core dependencies - minimal for basic operation
dependencies = [
    "scapy>=2.4.5",
]

[project.optional-dependencies]
# Full installation with all features
full = [
    "redis>=4.0.0",
    "pysnmp>=4.4.12",
    "pyasn1>=0.4.8",
    "cryptography>=3.4.0",
    "pycryptodome>=3.15.0",
]

# SNMPv3 decryption support
snmpv3 = [
    "pysnmp>=4.4.12",
    "pyasn1>=0.4.8",
    "cryptography>=3.4.0",
    "pycryptodome>=3.15.0",
]

# Redis caching for trap replay
cache = [
    "redis>=4.0.0",
]

# Development and testing
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/trapninja/trapninja/tree/main/docs"
Repository = "https://github.com/trapninja/trapninja"
Changelog = "https://github.com/trapninja/trapninja/blob/main/dev/CHANGELOG.md"

[project.scripts]
# CLI entry point - allows running as 'trapninja' after pip install
trapninja = "trapninja.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["trapninja*"]

[tool.setuptools.dynamic]
version = {file = "src/VERSION"}

[tool.setuptools.package-data]
trapninja = ["py.typed"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["dev/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.pytest_cache
    | __pycache__
    | \.idea
    | build
    | dist
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".pytest_cache",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "build",
    "dist",
    "dev/tests",
]

[tool.coverage.run]
source = ["src/trapninja"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
